[gd_scene load_steps=8 format=3 uid="uid://b5fos8i20l58o"]

[ext_resource type="FontFile" uid="uid://mmt3ntbg5e3r" path="res://assets/SpaceGrotesk-Bold.ttf" id="1_1ganh"]
[ext_resource type="Script" uid="uid://cjulv8eou6o8" path="res://menus/calibration_set_menu.gd" id="1_app3v"]
[ext_resource type="StyleBox" uid="uid://0fah7ib3txpx" path="res://styles/style_box_bg.tres" id="2_dgpm0"]
[ext_resource type="Theme" uid="uid://bow1via2pq7jw" path="res://styles/theme.tres" id="3_kkmag"]
[ext_resource type="StyleBox" uid="uid://2lwsuoxnt6ca" path="res://styles/style_box_title.tres" id="5_lkdgx"]

[sub_resource type="LabelSettings" id="LabelSettings_4h8nv"]
line_spacing = -25.0
font_size = 32
font_color = Color(0.07450981, 0.07450981, 0.07450981, 1)

[sub_resource type="LabelSettings" id="LabelSettings_app3v"]
font_size = 40
font_color = Color(0.07450981, 0.07450981, 0.07450981, 1)

[node name="calibrationSetMenu" type="Node2D"]
script = ExtResource("1_app3v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="background" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("2_dgpm0")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -140.0
offset_right = 192.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_kkmag")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 113
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="offsetAmtContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="offsetAmt" type="LineEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/offsetAmtContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1ganh")
theme_override_font_sizes/font_size = 30
placeholder_text = "35.002"
alignment = 1
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="offsetLabelms" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/offsetAmtContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "ms"
label_settings = SubResource("LabelSettings_4h8nv")
horizontal_alignment = 1

[node name="buttonsContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 40

[node name="okButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/buttonsContainer"]
layout_mode = 2
theme = ExtResource("3_kkmag")
theme_override_font_sizes/font_size = 40
text = "  OK  "

[node name="cancelButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/buttonsContainer"]
layout_mode = 2
theme = ExtResource("3_kkmag")
theme_override_font_sizes/font_size = 40
text = "  Cancel  "

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -140.0
offset_right = 192.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_lkdgx")

[node name="offsetLabel" type="Label" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2
text = "Configure Offset"
label_settings = SubResource("LabelSettings_app3v")
horizontal_alignment = 1

[connection signal="button_up" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/buttonsContainer/okButton" to="." method="_on_ok_button_button_up"]
[connection signal="button_up" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/buttonsContainer/cancelButton" to="." method="_on_cancel_button_button_up"]
